# shopipy

./: .gitignore  Makefile  README.md  private.ipynb  public.ipynb  pyproject.toml  setup.py  test.ipynb
pyshop/: base.py
pyshop/resources/auth/: __init__.py
pyshop/resources/collections/: __init__.py
pyshop/resources/customers/: __init__.py
pyshop/resources/inventory/: __init__.py  schemas.py
pyshop/resources/orders/: __init__.py  schemas.py
pyshop/resources/shipping/: __init__.py  schemas.py
pyshop/resources/webhooks/: schemas.py
pyshopify/: __init__.py  base.py  exceptions.py
pyshopify/resources/auth/: __init__.py
pyshopify/resources/collections/: __init__.py
pyshopify/resources/common/: __init__.py
pyshopify/resources/customers/: __init__.py
pyshopify/resources/fulfillment/: __init__.py
pyshopify/resources/inventory/: __init__.py  schemas.py
pyshopify/resources/orders/: __init__.py  schemas.py
pyshopify/resources/products/: __init__.py
pyshopify/resources/shipping/: __init__.py  schemas.py
pyshopify/resources/transactions/: schemas.py
pyshopify/resources/webhooks/: __init__.py
shopipy/: __init__.py  base.py
shopipy/resources/auth/: __init__.py
shopipy/resources/collections/: __init__.py  schemas.py
shopipy/resources/common/: schemas.py
shopipy/resources/customers/: __init__.py
shopipy/resources/fulfillment/: __init__.py  schemas.py
shopipy/resources/inventory/: __init__.py
shopipy/resources/oauth/: __init__.py
shopipy/resources/orders/: __init__.py  schemas.py
shopipy/resources/products/: __init__.py  schemas.py
(+4 files in other folders)
