[tool.poetry]
description = "An alternative wrapper to the Shopify API."
name = "shopify-api"
authors = ["Lowercase <lowercase00@gmail.com>"]
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.8.2"
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
